# asari

./: .gitignore  LICENSE  MANIFEST.in  Makefile  Procfile  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: build.yml  ci.yml  package-installation.yml
asari/: api.py  preprocess.py  task.py  train.py  utils.py
asari/data/: model.pkl
server/: app.py
server/templates/: index.html
tests/: test_api.py
